test/types/tuple/errors/array-size-length.chpl
var A: [1..2] int;
var tup: A.size*int;
