test/types/tuple/errors/array-size-length.good
array-size-length.chpl:2: error: tuple size must be known at compile-time
